# FactoriOS

./: .gitignore  CLAUDE.md  README.md  build.sh
.github/workflows/: build-iso.yml
greeter/: README.md  pyproject.toml
greeter/factorios_greeter/: __init__.py  app.py  chooser.py  demo.py  login.py  power.py  updates.py  worker.py
installer/: README.md  install.sh
iso/: README.md  build.sh  packages.x86_64  pacman.conf  profiledef.sh
iso/airootfs/etc/: hostname  pacman.conf
iso/airootfs/etc/mkinitcpio.conf.d/: archiso.conf
iso/airootfs/etc/mkinitcpio.d/: linux.preset
iso/airootfs/etc/pacman.d/: mirrorlist
iso/airootfs/root/: .automated_script.sh  .bash_profile
iso/grub/: grub.cfg  loopback.cfg
iso/syslinux/: syslinux-linux.cfg  syslinux.cfg
launcher/: README.md  pyproject.toml
launcher/factorios_launcher/: __init__.py  __main__.py  auth.py  download.py  paths.py  profiles.py  versions.py
systemd/: README.md  factorios-labwc-rc.xml  factorios-pacman.sudoers  factorios-performance  factorios-performance.service  factorios-session  factorios-sysusers.conf  factorios-tmpfiles.conf  factorios.service
