[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "factorios-launcher"
version = "0.1.0"
description = "factorio.com auth, downloads, and version/profile management for FactoriOS"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.scripts]
factorios-launcher = "factorios_launcher.__main__:main"

[tool.setuptools.packages.find]
include = ["factorios_launcher*"]
